# mirai-translate

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.html
.github/workflows/: tests.yml
mirai_translate/: __init__.py  lib.py
tests/: test_mirai_translate.py
tests/fixtures/: index.html
