[tool.poetry]
name = "mirai-translate"
version = "0.1.1"
description = "Unofficial Mirai Translate API for Python"
authors = ["reiyw <reiyw.setuve@gmail.com>"]
readme = "README.md"
repository = "https://github.com/reiyw/mirai-translate"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.13.2"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
respx = "^0.11.1"
pre-commit = "^2.5.1"
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^4.3.21"

[tool.isort]
line_length = 88
force_grid_wrap = 0
atomic = true
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
filter_files = true
known_first_party = "mirai_translate"
known_third_party = ["respx", "pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
