[tool.poetry]
name = "mirai-translate"
version = "0.1.3"
description = "Unofficial Mirai Translate API for Python"
authors = ["reiyw <reiyw.setuve@gmail.com>"]
readme = "README.md"
repository = "https://github.com/reiyw/mirai-translate"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
respx = "^0.16.3"

[tool.isort]
line_length = 88
include_trailing_comma = true
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
